# th-research-navigator

./: README.md
api/: README.md
app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
app/about/: page.tsx
app/api/authors/: route.ts
app/api/health/: route.ts
app/authors/: page.tsx
app/journals/: page.tsx
app/papers/: page.tsx
components/: active-filter-chips.tsx  author-card.tsx  empty-state.tsx  filter-sidebar.tsx  journal-card.tsx  loading-skeleton.tsx  pagination.tsx  site-header.tsx  theme-provider.tsx
docs/: api-contracts.md  architecture.md  build-plan.md  data-model.md  deployment.md  file-tree.md  future-ai.md  ingestion.md  journal-curation.md  product-definition.md  search-index.md  search-quality.md  troubleshooting.md
infra/: docker-compose.yml
ingestion/: README.md  pyproject.toml  requirements.txt
ingestion/cli/thrn/: __init__.py  __main__.py  commands.py
ingestion/src/thrn_ingest/: __init__.py  authors.py  config.py  db.py  ingest_works.py  logging_setup.py  match_sources.py  models.py  openalex_client.py  raw_audit.py  runs.py  whitelist.py
ingestion/tests/: __init__.py  test_abstract_reconstruction.py  test_match_confidence.py
scripts/: health.sh  reset-db.sh
search/evaluation/: README.md  eval_search.py  install_synonyms.py  queries.yaml  synonyms.json
search/schemas/: authors.json  journals.json  papers.json
search/scripts/: __init__.py  create_collections.py  partial_update.py  reindex_authors.py  reindex_journals.py  reindex_papers.py  typesense_client.py
seed/: journal_whitelist.csv
(+10 files in other folders)
